ENYO-3802: fix issue for overlapping buttons

--- a/deimos/source/Deimos.less
+++ b/deimos/source/Deimos.less
@@ -55,3 +55,9 @@
 .ares-deimos-middle {
 	margin: 0 8px;
 }
+.deimos-kind-picker{
+	max-width: 20em;
+}
+.editor-controls{
+	overflow: hidden;
+}
